Fixed z-index issue

--- a/css/new.css
+++ b/css/new.css
@@ -48,7 +48,7 @@ Set global variables
 }
 
 body {
-  font-size: clamp(0.875rem, 1rem + 0.25vw, 1.5rem);
+  font-size: clamp(0.875rem, 100% + 0.25vw, 1.5rem);
   font-family: var(--font-main);
 }
 
@@ -65,6 +65,8 @@ footer {
   max-width: none;
 }
 
+h1 { font-size: 2em; }
+
 
 /* Basic reset */
 
@@ -79,37 +81,48 @@ Hero section
 
 .hero {
   position: relative;
-  background: url('/img/blurred_bg.jpg') center/cover;
+  background: url('/img/lab_web2.png') bottom right/contain no-repeat,
+  url('/img/blurred_bg.jpg') center/cover;
   height: 100vh;
   padding-left: 1rem;
   padding-right: 1rem;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
   align-items: center;
-  overflow: hidden;
 }
 
 .hero::before {
   position: absolute;
   content: "";
-  background: url('/img/lab_web2.png') bottom right/auto 60% no-repeat;
+  background: var(--color-secondary);
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   opacity: 60%;
 }
-
-.hero > img { margin: 0.5rem; }
+.hero > * { z-index: 1; }
+.hero > img { margin: 0.5rem; max-width: min(30em, 100%); }
 
 .hero > p {text-align: center;}
-
 
 .hero a {
   text-decoration: none;
   border: 3px solid var(--color-primary);
   border-radius: 6px;
   color: var(--color-light);
-  padding: 0.5rem 0.75rem;
+  padding: 0.5em 0.75em;
+}
+
+
+
+/*==========
+MEDIA QUERIES
+==========*/
+
+@media (min-width: 37.5em) {
+  .hero{
+    background: url('/img/lab_web2.png') bottom right/auto 65% no-repeat,
+    url('/img/blurred_bg.jpg') center/cover;
+  }
 }
